# zeldas-dag

./: .env  Dockerfile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  resources.py  workspace.yaml  workspace.yml
zeldas-dbt-models/: dbt_project.yml
zeldas-dbt-models/config/: profiles.yml
zeldas-dbt-models/models/sources/snowplow/: snowplow_source.yml  src_snowplow_events_all_eph.sql
zeldas-dbt-models/models/staging/snowplow/: stg_snowplow_events_all_fct.sql
zeldas_dag/: __init__.py
zeldas_dag/zeldas_assets/: __init__.py
zeldas_models/: dbt_project.yml
zeldas_models/config/: .user.yml  profiles.yml
zeldas_models/models/staging/snowplow/: stg_snowplow_events_fct_view.sql
