[tool.poetry]
name = "dagster-dbt-dev"
version = "0.1.0"
description = ""
authors = ["Yale Newman <thedatagata@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_dbt_dev"}]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.3.2"
dagit = "^1.3.2"
dbt-core = "^1.5.0"
dagster-dbt = "^0.19.2"
dagster-postgres = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
